feat/Zarr : optimize reading with parallel reading of chunks, and support fillValue (not working before)